# RAGMCP

./: ReadMe.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
docs/: 01_Rag.md  02_chunking_strategy.md  03_embedding.md  04_vectordb.md
embedding/: chunks.json
kb/: Policy.md
src/basic/: chunk.py  embedding.py  query.py
src/consumer/: chatbot.py
src/langchain/: langchain_rag.py
src/mcp/: server.py
